@@ -20,12 +20,8 @@ package org.apache.pinot.queries;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.concurrent.ThreadLocalRandom;
 import org.apache.commons.io.FileUtils;
 import org.apache.pinot.core.common.Operator;
@@ -155,17 +151,13 @@ public class NativeAndLuceneComparisonTest extends BaseQueriesTest {
   private void buildLuceneSegment()
       throws Exception {
     List<GenericRow> rows = createTestData(NUM_ROWS);
-    List<FieldConfig> fieldConfigs = new ArrayList<>();
-
-    fieldConfigs.add(
-        new FieldConfig(QUOTES_COL_LUCENE, FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.TEXT, null,
-            null));
-    fieldConfigs.add(
+    List<FieldConfig> fieldConfigs = List.of(
+        new FieldConfig(QUOTES_COL_LUCENE, FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.TEXT, null, null),
         new FieldConfig(QUOTES_COL_LUCENE_MV, FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.TEXT, null,
             null));
 
     TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
-        .setInvertedIndexColumns(Arrays.asList(QUOTES_COL_LUCENE, QUOTES_COL_LUCENE_MV))
+        .setInvertedIndexColumns(List.of(QUOTES_COL_LUCENE, QUOTES_COL_LUCENE_MV))
         .setFieldConfigList(fieldConfigs).build();
     Schema schema = new Schema.SchemaBuilder().setSchemaName(TABLE_NAME)
         .addSingleValueDimension(QUOTES_COL_LUCENE, FieldSpec.DataType.STRING)
@@ -185,22 +177,16 @@ public class NativeAndLuceneComparisonTest extends BaseQueriesTest {
   private void buildNativeTextIndexSegment()
       throws Exception {
     List<GenericRow> rows = createTestData(NUM_ROWS);
-    List<FieldConfig> fieldConfigs = new ArrayList<>();
-    Map<String, String> propertiesMap = new HashMap<>();
-    FSTType fstType = FSTType.NATIVE;
-
-    propertiesMap.put(FieldConfig.TEXT_FST_TYPE, FieldConfig.TEXT_NATIVE_FST_LITERAL);
-
-    fieldConfigs.add(
+    List<FieldConfig> fieldConfigs = List.of(
         new FieldConfig(QUOTES_COL_NATIVE, FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.TEXT, null,
-            propertiesMap));
-    fieldConfigs.add(
+            Map.of(FieldConfig.TEXT_FST_TYPE, FieldConfig.TEXT_NATIVE_FST_LITERAL)),
         new FieldConfig(QUOTES_COL_NATIVE_MV, FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.TEXT, null,
-            propertiesMap));
+            Map.of(FieldConfig.TEXT_FST_TYPE, FieldConfig.TEXT_NATIVE_FST_LITERAL)));
 
     TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
-        .setInvertedIndexColumns(Arrays.asList(QUOTES_COL_NATIVE, QUOTES_COL_NATIVE_MV))
+        .setInvertedIndexColumns(List.of(QUOTES_COL_NATIVE, QUOTES_COL_NATIVE_MV))
         .setFieldConfigList(fieldConfigs).build();
+    tableConfig.getIndexingConfig().setFSTIndexType(FSTType.NATIVE);
     Schema schema = new Schema.SchemaBuilder().setSchemaName(TABLE_NAME)
         .addSingleValueDimension(QUOTES_COL_NATIVE, FieldSpec.DataType.STRING)
         .addMultiValueDimension(QUOTES_COL_NATIVE_MV, FieldSpec.DataType.STRING).build();
@@ -208,7 +194,6 @@ public class NativeAndLuceneComparisonTest extends BaseQueriesTest {
     config.setOutDir(INDEX_DIR.getPath());
     config.setTableName(TABLE_NAME);
     config.setSegmentName(SEGMENT_NAME_NATIVE);
-    config.setFSTIndexType(fstType);
 
     SegmentIndexCreationDriverImpl driver = new SegmentIndexCreationDriverImpl();
     try (RecordReader recordReader = new GenericRowRecordReader(rows)) {
@@ -219,51 +204,47 @@ public class NativeAndLuceneComparisonTest extends BaseQueriesTest {
 
   private ImmutableSegment loadLuceneSegment()
       throws Exception {
-    IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig();
-    Set<String> textIndexCols = new HashSet<>();
-    textIndexCols.add(QUOTES_COL_LUCENE);
-    textIndexCols.add(QUOTES_COL_LUCENE_MV);
-    indexLoadingConfig.setTextIndexColumns(textIndexCols);
-    Set<String> invertedIndexCols = new HashSet<>();
-    invertedIndexCols.add(QUOTES_COL_LUCENE);
-    invertedIndexCols.add(QUOTES_COL_LUCENE_MV);
-    indexLoadingConfig.setInvertedIndexColumns(invertedIndexCols);
+    List<FieldConfig> fieldConfigs = List.of(
+        new FieldConfig(QUOTES_COL_LUCENE, FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.TEXT, null, null),
+        new FieldConfig(QUOTES_COL_LUCENE_MV, FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.TEXT, null,
+            null));
+    TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
+        .setInvertedIndexColumns(List.of(QUOTES_COL_LUCENE, QUOTES_COL_LUCENE_MV))
+        .setFieldConfigList(fieldConfigs).build();
+    Schema schema = new Schema.SchemaBuilder().setSchemaName(TABLE_NAME)
+        .addSingleValueDimension(QUOTES_COL_LUCENE, FieldSpec.DataType.STRING)
+        .addMultiValueDimension(QUOTES_COL_LUCENE_MV, FieldSpec.DataType.STRING).build();
+    IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig(tableConfig, schema);
     return ImmutableSegmentLoader.load(new File(INDEX_DIR, SEGMENT_NAME_LUCENE), indexLoadingConfig);
   }
 
   private ImmutableSegment loadNativeIndexSegment()
       throws Exception {
-    IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig();
-    Map<String, String> propertiesMap = new HashMap<>();
-    FSTType fstType = FSTType.NATIVE;
-    propertiesMap.put(FieldConfig.TEXT_FST_TYPE, FieldConfig.TEXT_NATIVE_FST_LITERAL);
-
-    Map<String, Map<String, String>> columnPropertiesParentMap = new HashMap<>();
-    Set<String> textIndexCols = new HashSet<>();
-    textIndexCols.add(QUOTES_COL_NATIVE);
-    textIndexCols.add(QUOTES_COL_NATIVE_MV);
-    indexLoadingConfig.setTextIndexColumns(textIndexCols);
-    indexLoadingConfig.setFSTIndexType(fstType);
-    Set<String> invertedIndexCols = new HashSet<>();
-    invertedIndexCols.add(QUOTES_COL_NATIVE);
-    invertedIndexCols.add(QUOTES_COL_NATIVE_MV);
-    indexLoadingConfig.setInvertedIndexColumns(invertedIndexCols);
-    columnPropertiesParentMap.put(QUOTES_COL_NATIVE, propertiesMap);
-    columnPropertiesParentMap.put(QUOTES_COL_NATIVE_MV, propertiesMap);
-    indexLoadingConfig.setColumnProperties(columnPropertiesParentMap);
+    List<FieldConfig> fieldConfigs = List.of(
+        new FieldConfig(QUOTES_COL_NATIVE, FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.TEXT, null,
+            Map.of(FieldConfig.TEXT_FST_TYPE, FieldConfig.TEXT_NATIVE_FST_LITERAL)),
+        new FieldConfig(QUOTES_COL_NATIVE_MV, FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.TEXT, null,
+            Map.of(FieldConfig.TEXT_FST_TYPE, FieldConfig.TEXT_NATIVE_FST_LITERAL)));
+    TableConfig tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
+        .setInvertedIndexColumns(List.of(QUOTES_COL_NATIVE, QUOTES_COL_NATIVE_MV)).setFieldConfigList(fieldConfigs)
+        .build();
+    Schema schema = new Schema.SchemaBuilder().setSchemaName(TABLE_NAME)
+        .addSingleValueDimension(QUOTES_COL_NATIVE, FieldSpec.DataType.STRING)
+        .addMultiValueDimension(QUOTES_COL_NATIVE_MV, FieldSpec.DataType.STRING).build();
+    IndexLoadingConfig indexLoadingConfig = new IndexLoadingConfig(tableConfig, schema);
     return ImmutableSegmentLoader.load(new File(INDEX_DIR, SEGMENT_NAME_NATIVE), indexLoadingConfig);
   }
 
   private void testSelectionResults(String nativeQuery, String luceneQuery) {
     _indexSegment = _nativeIndexSegment;
-    _indexSegments = Arrays.asList(_nativeIndexSegment);
+    _indexSegments = List.of(_nativeIndexSegment);
     Operator<SelectionResultsBlock> operator = getOperator(nativeQuery);
     SelectionResultsBlock operatorResult = operator.nextBlock();
     List<Object[]> resultset = (List<Object[]>) operatorResult.getRows();
     Assert.assertNotNull(resultset);
 
     _indexSegment = _luceneSegment;
-    _indexSegments = Arrays.asList(_luceneSegment);
+    _indexSegments = List.of(_luceneSegment);
     operator = getOperator(luceneQuery);
     operatorResult = operator.nextBlock();
     List<Object[]> resultset2 = (List<Object[]>) operatorResult.getRows();
