@@ -19,6 +19,7 @@
 package org.apache.pinot.query.routing;
 
 import com.google.common.base.Preconditions;
+import com.google.common.collect.Maps;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -29,16 +30,22 @@ import java.util.Map;
 import java.util.Random;
 import java.util.Set;
 import javax.annotation.Nullable;
-import org.apache.commons.lang3.tuple.Pair;
+import org.apache.calcite.rel.RelDistribution;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.pinot.calcite.rel.hint.PinotHintOptions;
+import org.apache.pinot.calcite.rel.rules.ImmutableTableOptions;
+import org.apache.pinot.calcite.rel.rules.TableOptions;
 import org.apache.pinot.core.routing.RoutingManager;
 import org.apache.pinot.core.routing.RoutingTable;
+import org.apache.pinot.core.routing.ServerRouteInfo;
 import org.apache.pinot.core.routing.TablePartitionInfo;
 import org.apache.pinot.core.routing.TimeBoundaryInfo;
 import org.apache.pinot.core.transport.ServerInstance;
 import org.apache.pinot.query.planner.PlanFragment;
 import org.apache.pinot.query.planner.physical.DispatchablePlanContext;
 import org.apache.pinot.query.planner.physical.DispatchablePlanMetadata;
+import org.apache.pinot.query.planner.plannode.MailboxSendNode;
+import org.apache.pinot.query.planner.plannode.PlanNode;
 import org.apache.pinot.query.planner.plannode.TableScanNode;
 import org.apache.pinot.spi.config.table.TableType;
 import org.apache.pinot.spi.utils.CommonConstants.Broker.Request.QueryOptionKey;
@@ -84,13 +91,59 @@ public class WorkerManager {
   }
 
   private void assignWorkersToNonRootFragment(PlanFragment fragment, DispatchablePlanContext context) {
-    for (PlanFragment child : fragment.getChildren()) {
+    List<PlanFragment> children = fragment.getChildren();
+    for (PlanFragment child : children) {
       assignWorkersToNonRootFragment(child, context);
     }
-    if (isLeafPlan(context.getDispatchablePlanMetadataMap().get(fragment.getFragmentId()))) {
-      assignWorkersToLeafFragment(fragment, context);
+    Map<Integer, DispatchablePlanMetadata> metadataMap = context.getDispatchablePlanMetadataMap();
+    DispatchablePlanMetadata metadata = metadataMap.get(fragment.getFragmentId());
+    if (isLeafPlan(metadata)) {
+      // TODO: Revisit this logic and see if we can generalize this
+      // For LOOKUP join, join is leaf stage because there is no exchange added to the right side of the join. When we
+      // find a single local exchange child in the leaf stage, assign workers based on the local exchange child.
+      if (children.size() == 1 && isLocalExchange(children.get(0), context)) {
+        DispatchablePlanMetadata childMetadata = metadataMap.get(children.get(0).getFragmentId());
+        metadata.setWorkerIdToServerInstanceMap(assignWorkersForLocalExchange(childMetadata));
+        metadata.setPartitionFunction(childMetadata.getPartitionFunction());
+      } else {
+        assignWorkersToLeafFragment(fragment, context);
+      }
     } else {
       assignWorkersToIntermediateFragment(fragment, context);
+    }
+  }
+
+  private boolean isLocalExchange(PlanFragment fragment, DispatchablePlanContext context) {
+    PlanNode planNode = fragment.getFragmentRoot();
+    if (planNode instanceof MailboxSendNode
+        && ((MailboxSendNode) planNode).getDistributionType() == RelDistribution.Type.SINGLETON) {
+      DispatchablePlanMetadata dispatchablePlanMetadata =
+          context.getDispatchablePlanMetadataMap().get(fragment.getFragmentId());
+      // NOTE: Do not count replicated table as local exchange because it needs to follow the worker assignment for its
+      //       peer node.
+      return dispatchablePlanMetadata.getReplicatedSegments() == null;
+    }
+    return false;
+  }
+
+  private Map<Integer, QueryServerInstance> assignWorkersForLocalExchange(DispatchablePlanMetadata childMetadata) {
+    int partitionParallelism = childMetadata.getPartitionParallelism();
+    Map<Integer, QueryServerInstance> childWorkerIdToServerInstanceMap = childMetadata.getWorkerIdToServerInstanceMap();
+    if (partitionParallelism == 1) {
+      return childWorkerIdToServerInstanceMap;
+    } else {
+      // Create multiple intermediate stage workers on the same instance for each worker in the child
+      int numChildWorkers = childWorkerIdToServerInstanceMap.size();
+      Map<Integer, QueryServerInstance> workerIdToServerInstanceMap =
+          Maps.newHashMapWithExpectedSize(numChildWorkers * partitionParallelism);
+      int workerId = 0;
+      for (int i = 0; i < numChildWorkers; i++) {
+        QueryServerInstance serverInstance = childWorkerIdToServerInstanceMap.get(i);
+        for (int j = 0; j < partitionParallelism; j++) {
+          workerIdToServerInstanceMap.put(workerId++, serverInstance);
+        }
+      }
+      return workerIdToServerInstanceMap;
     }
   }
 
@@ -102,73 +155,112 @@ public class WorkerManager {
   // Intermediate stage assign logic
   // --------------------------------------------------------------------------
   private void assignWorkersToIntermediateFragment(PlanFragment fragment, DispatchablePlanContext context) {
+    List<PlanFragment> children = fragment.getChildren();
     Map<Integer, DispatchablePlanMetadata> metadataMap = context.getDispatchablePlanMetadataMap();
     DispatchablePlanMetadata metadata = metadataMap.get(fragment.getFragmentId());
 
-    // If the first child is partitioned and can be inherent from this intermediate stage, use the same worker
-    // assignment to avoid shuffling data.
-    // When partition parallelism is configured,
-    // 1. create multiple intermediate stage workers on the same instance for each worker in the first child if the
-    //    first child is a table scan. this is b/c we cannot pre-config parallelism on leaf stage thus needs fan-out.
-    // 2. ignore partition parallelism when first child is NOT table scan b/c it would've done fan-out already.
-    if (isPrePartitionAssignment(fragment, metadataMap)) {
-      DispatchablePlanMetadata firstChildMetadata = metadataMap.get(fragment.getChildren().get(0).getFragmentId());
-      int partitionParallelism = firstChildMetadata.getPartitionParallelism();
-      Map<Integer, QueryServerInstance> childWorkerIdToServerInstanceMap =
-          firstChildMetadata.getWorkerIdToServerInstanceMap();
-      if (partitionParallelism == 1 || firstChildMetadata.getScannedTables().size() == 0) {
-        metadata.setWorkerIdToServerInstanceMap(childWorkerIdToServerInstanceMap);
-      } else {
-        int numChildWorkers = childWorkerIdToServerInstanceMap.size();
-        Map<Integer, QueryServerInstance> workerIdToServerInstanceMap = new HashMap<>();
-        int workerId = 0;
-        for (int i = 0; i < numChildWorkers; i++) {
-          QueryServerInstance serverInstance = childWorkerIdToServerInstanceMap.get(i);
-          for (int j = 0; j < partitionParallelism; j++) {
-            workerIdToServerInstanceMap.put(workerId++, serverInstance);
-          }
-        }
-        metadata.setWorkerIdToServerInstanceMap(workerIdToServerInstanceMap);
-      }
+    if (isPrePartitionAssignment(children, metadataMap)) {
+      // If all the children are pre-partitioned the same way, use local exchange.
+      DispatchablePlanMetadata firstChildMetadata = metadataMap.get(children.get(0).getFragmentId());
+      metadata.setWorkerIdToServerInstanceMap(assignWorkersForLocalExchange(firstChildMetadata));
       metadata.setPartitionFunction(firstChildMetadata.getPartitionFunction());
-    } else {
-      // If the query has more than one table, it is possible that the tables could be hosted on different tenants.
-      // The intermediate stage will be processed on servers randomly picked from the tenants belonging to either or
-      // all of the tables in the query.
-      // TODO: actually make assignment strategy decisions for intermediate stages
+      return;
+    }
+
+    if (metadata.isRequiresSingletonInstance()) {
+      // When singleton instance is required, return a single worker with ID 0.
       List<ServerInstance> serverInstances = assignServerInstances(context);
-      if (metadata.isRequiresSingletonInstance()) {
-        // require singleton should return a single global worker ID with 0;
-        metadata.setWorkerIdToServerInstanceMap(Collections.singletonMap(0,
-            new QueryServerInstance(serverInstances.get(RANDOM.nextInt(serverInstances.size())))));
+      metadata.setWorkerIdToServerInstanceMap(
+          Map.of(0, new QueryServerInstance(serverInstances.get(RANDOM.nextInt(serverInstances.size())))));
+      return;
+    }
+
+    // Assign workers for local exchange if there is one
+    DispatchablePlanMetadata localExchangeChildMetadata = null;
+    Map<Integer, QueryServerInstance> workerIdToServerInstanceMap = null;
+    for (PlanFragment child : children) {
+      if (isLocalExchange(child, context)) {
+        Preconditions.checkState(localExchangeChildMetadata == null, "Found multiple local exchanges in the children");
+        localExchangeChildMetadata = metadataMap.get(child.getFragmentId());
+        workerIdToServerInstanceMap = assignWorkersForLocalExchange(localExchangeChildMetadata);
+      }
+    }
+
+    // If there is no local exchange, assign workers to the servers hosting the tables
+    List<ServerInstance> serverInstances = null;
+    if (workerIdToServerInstanceMap == null) {
+      serverInstances = assignServerInstances(context);
+      int stageParallelism = Integer.parseInt(
+          context.getPlannerContext().getOptions().getOrDefault(QueryOptionKey.STAGE_PARALLELISM, "1"));
+      workerIdToServerInstanceMap = Maps.newHashMapWithExpectedSize(serverInstances.size() * stageParallelism);
+      int workerId = 0;
+      if (stageParallelism == 1) {
+        for (ServerInstance serverInstance : serverInstances) {
+          workerIdToServerInstanceMap.put(workerId++, new QueryServerInstance(serverInstance));
+        }
       } else {
-        Map<String, String> options = context.getPlannerContext().getOptions();
-        int stageParallelism = Integer.parseInt(options.getOrDefault(QueryOptionKey.STAGE_PARALLELISM, "1"));
-        Map<Integer, QueryServerInstance> workerIdToServerInstanceMap = new HashMap<>();
-        int workerId = 0;
         for (ServerInstance serverInstance : serverInstances) {
           QueryServerInstance queryServerInstance = new QueryServerInstance(serverInstance);
           for (int i = 0; i < stageParallelism; i++) {
             workerIdToServerInstanceMap.put(workerId++, queryServerInstance);
           }
         }
-        metadata.setWorkerIdToServerInstanceMap(workerIdToServerInstanceMap);
-        metadata.setPartitionFunction(DEFAULT_SHUFFLE_PARTITION_FUNCTION);
       }
+    }
+
+    // Handle replicated leaf stage, fill worker ids based on the assignment from:
+    // - Local exchange peer if exists
+    // - Intermediate stage workers
+    // Do not include workers resulted from parallelism to reduce repeated work
+    for (PlanFragment child : children) {
+      DispatchablePlanMetadata childMetadata = metadataMap.get(child.getFragmentId());
+      Map<String, List<String>> replicatedSegments = childMetadata.getReplicatedSegments();
+      if (replicatedSegments != null) {
+        // Fill worker ids for the replicated
+        assert
+            childMetadata.getWorkerIdToServerInstanceMap() == null && childMetadata.getWorkerIdToSegmentsMap() == null;
+        Map<Integer, QueryServerInstance> childWorkerIdToServerInstanceMap;
+        Map<Integer, Map<String, List<String>>> childWorkerIdToSegmentsMap;
+        if (localExchangeChildMetadata != null) {
+          childWorkerIdToServerInstanceMap = localExchangeChildMetadata.getWorkerIdToServerInstanceMap();
+          childWorkerIdToSegmentsMap = Maps.newHashMapWithExpectedSize(childWorkerIdToServerInstanceMap.size());
+          for (Integer workerId : childWorkerIdToServerInstanceMap.keySet()) {
+            childWorkerIdToSegmentsMap.put(workerId, replicatedSegments);
+          }
+        } else {
+          int numWorkers = serverInstances.size();
+          childWorkerIdToServerInstanceMap = Maps.newHashMapWithExpectedSize(numWorkers);
+          childWorkerIdToSegmentsMap = Maps.newHashMapWithExpectedSize(numWorkers);
+          for (int workerId = 0; workerId < numWorkers; workerId++) {
+            childWorkerIdToServerInstanceMap.put(workerId, new QueryServerInstance(serverInstances.get(workerId)));
+            childWorkerIdToSegmentsMap.put(workerId, replicatedSegments);
+          }
+        }
+        childMetadata.setWorkerIdToServerInstanceMap(childWorkerIdToServerInstanceMap);
+        childMetadata.setWorkerIdToSegmentsMap(childWorkerIdToSegmentsMap);
+      }
+    }
+
+    metadata.setWorkerIdToServerInstanceMap(workerIdToServerInstanceMap);
+    if (localExchangeChildMetadata != null) {
+      metadata.setPartitionFunction(localExchangeChildMetadata.getPartitionFunction());
+    } else {
+      metadata.setPartitionFunction(DEFAULT_SHUFFLE_PARTITION_FUNCTION);
     }
   }
 
-  private boolean isPrePartitionAssignment(PlanFragment fragment, Map<Integer, DispatchablePlanMetadata> metadataMap) {
-    List<PlanFragment> children = fragment.getChildren();
+  private boolean isPrePartitionAssignment(List<PlanFragment> children,
+      Map<Integer, DispatchablePlanMetadata> metadataMap) {
     if (children.isEmpty()) {
       return false;
     }
     // Now, is all children needs to be pre-partitioned by the same function and size to allow pre-partition assignment
-    // TODO1: when partition function is allowed to be configured in exchange we can relax this condition
-    // TODO2: pick the most colocate assignment instead of picking the first children
+    // TODO:
+    //   1. When partition function is allowed to be configured in exchange we can relax this condition
+    //   2. Pick the most colocate assignment instead of picking the first children
     String partitionFunction = null;
     int partitionCount = 0;
-    for (PlanFragment child : fragment.getChildren()) {
+    for (PlanFragment child : children) {
       DispatchablePlanMetadata childMetadata = metadataMap.get(child.getFragmentId());
       if (!childMetadata.isPrePartitioned()) {
         return false;
@@ -178,8 +270,11 @@ public class WorkerManager {
       } else if (!partitionFunction.equalsIgnoreCase(childMetadata.getPartitionFunction())) {
         return false;
       }
-      int childComputedPartitionCount = childMetadata.getWorkerIdToServerInstanceMap().size()
-          * (isLeafPlan(childMetadata) ? childMetadata.getPartitionParallelism() : 1);
+      Map<Integer, QueryServerInstance> workerIdToServerInstanceMap = childMetadata.getWorkerIdToServerInstanceMap();
+      if (workerIdToServerInstanceMap == null) {
+        return false;
+      }
+      int childComputedPartitionCount = workerIdToServerInstanceMap.size() * childMetadata.getPartitionParallelism();
       if (partitionCount == 0) {
         partitionCount = childComputedPartitionCount;
       } else if (childComputedPartitionCount != partitionCount) {
@@ -189,11 +284,14 @@ public class WorkerManager {
     return true;
   }
 
+  /**
+   * Returns the servers serving any segment of the tables in the query.
+   */
   private List<ServerInstance> assignServerInstances(DispatchablePlanContext context) {
     List<ServerInstance> serverInstances;
     Set<String> tableNames = context.getTableNames();
     Map<String, ServerInstance> enabledServerInstanceMap = _routingManager.getEnabledServerInstanceMap();
-    if (tableNames.size() == 0) {
+    if (tableNames.isEmpty()) {
       // TODO: Short circuit it when no table needs to be scanned
       // This could be the case from queries that don't actually fetch values from the tables. In such cases the
       // routing need not be tenant aware.
@@ -246,13 +344,27 @@ public class WorkerManager {
   private void assignWorkersToLeafFragment(PlanFragment fragment, DispatchablePlanContext context) {
     DispatchablePlanMetadata metadata = context.getDispatchablePlanMetadataMap().get(fragment.getFragmentId());
     Map<String, String> tableOptions = metadata.getTableOptions();
-    String partitionKey =
-        tableOptions != null ? tableOptions.get(PinotHintOptions.TableHintOptions.PARTITION_KEY) : null;
-    if (partitionKey == null) {
-      // when partition key is not given, we do not partition assign workers for leaf-stage.
+    if (tableOptions == null) {
       assignWorkersToNonPartitionedLeafFragment(metadata, context);
-    } else {
+      return;
+    }
+
+    String partitionParallelismStr = tableOptions.get(PinotHintOptions.TableHintOptions.PARTITION_PARALLELISM);
+    int partitionParallelism = partitionParallelismStr != null ? Integer.parseInt(partitionParallelismStr) : 1;
+    Preconditions.checkState(partitionParallelism > 0, "'%s' must be positive: %s, got: %s",
+        PinotHintOptions.TableHintOptions.PARTITION_PARALLELISM, partitionParallelism);
+    metadata.setPartitionParallelism(partitionParallelism);
+
+    String partitionKey = tableOptions.get(PinotHintOptions.TableHintOptions.PARTITION_KEY);
+    if (partitionKey != null) {
       assignWorkersToPartitionedLeafFragment(metadata, context, partitionKey, tableOptions);
+      return;
+    }
+
+    if (Boolean.parseBoolean(tableOptions.get(PinotHintOptions.TableHintOptions.IS_REPLICATED))) {
+      setSegmentsForReplicatedLeafFragment(metadata);
+    } else {
+      assignWorkersToNonPartitionedLeafFragment(metadata, context);
     }
   }
 
@@ -268,8 +380,7 @@ public class WorkerManager {
     // acquire time boundary info if it is a hybrid table.
     if (routingTableMap.size() > 1) {
       TimeBoundaryInfo timeBoundaryInfo = _routingManager.getTimeBoundaryInfo(
-          TableNameBuilder.forType(TableType.OFFLINE)
-              .tableNameWithType(TableNameBuilder.extractRawTableName(tableName)));
+          TableNameBuilder.OFFLINE.tableNameWithType(TableNameBuilder.extractRawTableName(tableName)));
       if (timeBoundaryInfo != null) {
         metadata.setTimeBoundaryInfo(timeBoundaryInfo);
       } else {
@@ -284,12 +395,12 @@ public class WorkerManager {
       String tableType = routingEntry.getKey();
       RoutingTable routingTable = routingEntry.getValue();
       // for each server instance, attach all table types and their associated segment list.
-      Map<ServerInstance, Pair<List<String>, List<String>>> segmentsMap = routingTable.getServerInstanceToSegmentsMap();
-      for (Map.Entry<ServerInstance, Pair<List<String>, List<String>>> serverEntry : segmentsMap.entrySet()) {
+      Map<ServerInstance, ServerRouteInfo> segmentsMap = routingTable.getServerInstanceToSegmentsMap();
+      for (Map.Entry<ServerInstance, ServerRouteInfo> serverEntry : segmentsMap.entrySet()) {
         Map<String, List<String>> tableTypeToSegmentListMap =
             serverInstanceToSegmentsMap.computeIfAbsent(serverEntry.getKey(), k -> new HashMap<>());
         // TODO: support optional segments for multi-stage engine.
-        Preconditions.checkState(tableTypeToSegmentListMap.put(tableType, serverEntry.getValue().getLeft()) == null,
+        Preconditions.checkState(tableTypeToSegmentListMap.put(tableType, serverEntry.getValue().getSegments()) == null,
             "Entry for server {} and table type: {} already exist!", serverEntry.getKey(), tableType);
       }
 
@@ -308,7 +419,6 @@ public class WorkerManager {
     }
     metadata.setWorkerIdToServerInstanceMap(workerIdToServerInstanceMap);
     metadata.setWorkerIdToSegmentsMap(workerIdToSegmentsMap);
-    metadata.setPartitionFunction(DEFAULT_SHUFFLE_PARTITION_FUNCTION);
   }
 
   /**
@@ -318,33 +428,87 @@ public class WorkerManager {
    * @return keyed-map from table type(s) to routing table(s).
    */
   private Map<String, RoutingTable> getRoutingTable(String tableName, long requestId) {
-    String rawTableName = TableNameBuilder.extractRawTableName(tableName);
     TableType tableType = TableNameBuilder.getTableTypeFromTableName(tableName);
-    Map<String, RoutingTable> routingTableMap = new HashMap<>();
-    RoutingTable routingTable;
     if (tableType == null) {
-      routingTable = getRoutingTable(rawTableName, TableType.OFFLINE, requestId);
-      if (routingTable != null) {
-        routingTableMap.put(TableType.OFFLINE.name(), routingTable);
+      // Raw table name
+      Map<String, RoutingTable> routingTableMap = new HashMap<>(4);
+      RoutingTable offlineRoutingTable =
+          getRoutingTableHelper(TableNameBuilder.OFFLINE.tableNameWithType(tableName), requestId);
+      if (offlineRoutingTable != null) {
+        routingTableMap.put(TableType.OFFLINE.name(), offlineRoutingTable);
       }
-      routingTable = getRoutingTable(rawTableName, TableType.REALTIME, requestId);
-      if (routingTable != null) {
-        routingTableMap.put(TableType.REALTIME.name(), routingTable);
+      RoutingTable realtimeRoutingTable =
+          getRoutingTableHelper(TableNameBuilder.REALTIME.tableNameWithType(tableName), requestId);
+      if (realtimeRoutingTable != null) {
+        routingTableMap.put(TableType.REALTIME.name(), realtimeRoutingTable);
       }
+      return routingTableMap;
     } else {
-      routingTable = getRoutingTable(tableName, tableType, requestId);
-      if (routingTable != null) {
-        routingTableMap.put(tableType.name(), routingTable);
-      }
+      // Table name with type
+      RoutingTable routingTable = getRoutingTableHelper(tableName, requestId);
+      return routingTable != null ? Map.of(tableType.name(), routingTable) : Map.of();
     }
-    return routingTableMap;
   }
 
-  private RoutingTable getRoutingTable(String tableName, TableType tableType, long requestId) {
-    String tableNameWithType =
-        TableNameBuilder.forType(tableType).tableNameWithType(TableNameBuilder.extractRawTableName(tableName));
+  @Nullable
+  private RoutingTable getRoutingTableHelper(String tableNameWithType, long requestId) {
     return _routingManager.getRoutingTable(
         CalciteSqlCompiler.compileToBrokerRequest("SELECT * FROM \"" + tableNameWithType + "\""), requestId);
+  }
+
+  // --------------------------------------------------------------------------
+  // Replicated non-partitioned leaf stage assignment
+  // --------------------------------------------------------------------------
+  private void setSegmentsForReplicatedLeafFragment(DispatchablePlanMetadata metadata) {
+    String tableName = metadata.getScannedTables().get(0);
+    Map<String, List<String>> segmentsMap = getSegments(tableName);
+    Preconditions.checkState(!segmentsMap.isEmpty(), "Unable to find segments for table: %s", tableName);
+
+    // Acquire time boundary info if it is a hybrid table.
+    if (segmentsMap.size() > 1) {
+      TimeBoundaryInfo timeBoundaryInfo = _routingManager.getTimeBoundaryInfo(
+          TableNameBuilder.OFFLINE.tableNameWithType(TableNameBuilder.extractRawTableName(tableName)));
+      if (timeBoundaryInfo != null) {
+        metadata.setTimeBoundaryInfo(timeBoundaryInfo);
+      } else {
+        // Remove offline table segments if no time boundary info is acquired.
+        segmentsMap.remove(TableType.OFFLINE.name());
+      }
+    }
+
+    // TODO: Support unavailable segments and optional segments for replicated leaf stage
+    metadata.setReplicatedSegments(segmentsMap);
+  }
+
+  /**
+   * Returns the segments for the given table, keyed by table type.
+   * TODO: It doesn't handle unavailable segments.
+   */
+  private Map<String, List<String>> getSegments(String tableName) {
+    TableType tableType = TableNameBuilder.getTableTypeFromTableName(tableName);
+    if (tableType == null) {
+      // Raw table name
+      Map<String, List<String>> segmentsMap = new HashMap<>(4);
+      List<String> offlineSegments = setSegmentsHelper(TableNameBuilder.OFFLINE.tableNameWithType(tableName));
+      if (CollectionUtils.isNotEmpty(offlineSegments)) {
+        segmentsMap.put(TableType.OFFLINE.name(), offlineSegments);
+      }
+      List<String> realtimeSegments = setSegmentsHelper(TableNameBuilder.REALTIME.tableNameWithType(tableName));
+      if (CollectionUtils.isNotEmpty(realtimeSegments)) {
+        segmentsMap.put(TableType.REALTIME.name(), realtimeSegments);
+      }
+      return segmentsMap;
+    } else {
+      // Table name with type
+      List<String> segments = setSegmentsHelper(tableName);
+      return CollectionUtils.isNotEmpty(segments) ? Map.of(tableType.name(), segments) : Map.of();
+    }
+  }
+
+  @Nullable
+  private List<String> setSegmentsHelper(String tableNameWithType) {
+    return _routingManager.getSegments(
+        CalciteSqlCompiler.compileToBrokerRequest("SELECT * FROM \"" + tableNameWithType + "\""));
   }
 
   // --------------------------------------------------------------------------
@@ -364,14 +528,11 @@ public class WorkerManager {
     String partitionFunction = tableOptions.getOrDefault(PinotHintOptions.TableHintOptions.PARTITION_FUNCTION,
         DEFAULT_TABLE_PARTITION_FUNCTION);
 
-    String partitionParallelismStr = tableOptions.get(PinotHintOptions.TableHintOptions.PARTITION_PARALLELISM);
-    int partitionParallelism = partitionParallelismStr != null ? Integer.parseInt(partitionParallelismStr) : 1;
-    Preconditions.checkState(partitionParallelism > 0, "'%s' must be positive: %s, got: %s",
-        PinotHintOptions.TableHintOptions.PARTITION_PARALLELISM, partitionParallelism);
-
     String tableName = metadata.getScannedTables().get(0);
-    PartitionTableInfo partitionTableInfo =
-        getPartitionTableInfo(tableName, partitionKey, numPartitions, partitionFunction);
+    // calculates the partition table info using the routing manager
+    PartitionTableInfo partitionTableInfo = calculatePartitionTableInfo(tableName);
+    // verifies that the partition table obtained from routing manager is compatible with the hint options
+    checkPartitionInfoMap(partitionTableInfo, tableName, partitionKey, numPartitions, partitionFunction);
 
     // Pick one server per partition
     // NOTE: Pick server based on the request id so that the same server is picked across different table scan when the
@@ -400,11 +561,23 @@ public class WorkerManager {
     metadata.setWorkerIdToSegmentsMap(workerIdToSegmentsMap);
     metadata.setTimeBoundaryInfo(partitionTableInfo._timeBoundaryInfo);
     metadata.setPartitionFunction(partitionFunction);
-    metadata.setPartitionParallelism(partitionParallelism);
   }
 
-  private PartitionTableInfo getPartitionTableInfo(String tableName, String partitionKey, int numPartitions,
-      String partitionFunction) {
+  @Nullable
+  public TableOptions inferTableOptions(String tableName) {
+    try {
+      PartitionTableInfo partitionTableInfo = calculatePartitionTableInfo(tableName);
+      return ImmutableTableOptions.builder()
+          .partitionFunction(partitionTableInfo._partitionFunction)
+          .partitionKey(partitionTableInfo._partitionKey)
+          .partitionSize(partitionTableInfo._numPartitions)
+          .build();
+    } catch (IllegalStateException e) {
+      return null;
+    }
+  }
+
+  private PartitionTableInfo calculatePartitionTableInfo(String tableName) {
     TableType tableType = TableNameBuilder.getTableTypeFromTableName(tableName);
     if (tableType == null) {
       String offlineTableName = TableNameBuilder.OFFLINE.tableNameWithType(tableName);
@@ -413,19 +586,27 @@ public class WorkerManager {
       boolean realtimeRoutingExists = _routingManager.routingExists(realtimeTableName);
       Preconditions.checkState(offlineRoutingExists || realtimeRoutingExists, "Routing doesn't exist for table: %s",
           tableName);
+
       if (offlineRoutingExists && realtimeRoutingExists) {
+        TablePartitionInfo offlineTpi = _routingManager.getTablePartitionInfo(offlineTableName);
+        Preconditions.checkState(offlineTpi != null, "Failed to find table partition info for table: %s",
+            offlineTableName);
+        TablePartitionInfo realtimeTpi = _routingManager.getTablePartitionInfo(realtimeTableName);
+        Preconditions.checkState(realtimeTpi != null, "Failed to find table partition info for table: %s",
+            realtimeTableName);
         // For hybrid table, find the common servers for each partition
         TimeBoundaryInfo timeBoundaryInfo = _routingManager.getTimeBoundaryInfo(offlineTableName);
         // Ignore OFFLINE side when time boundary info is unavailable
         if (timeBoundaryInfo == null) {
-          return getRealtimePartitionTableInfo(realtimeTableName, partitionKey, numPartitions, partitionFunction);
+          return PartitionTableInfo.fromTablePartitionInfo(realtimeTpi, TableType.REALTIME);
         }
-        TablePartitionInfo.PartitionInfo[] offlinePartitionInfoMap =
-            getTablePartitionInfo(offlineTableName, partitionKey, numPartitions,
-                partitionFunction).getPartitionInfoMap();
-        TablePartitionInfo.PartitionInfo[] realtimePartitionInfoMap =
-            getTablePartitionInfo(realtimeTableName, partitionKey, numPartitions,
-                partitionFunction).getPartitionInfoMap();
+
+        verifyCompatibility(offlineTpi, realtimeTpi);
+
+        TablePartitionInfo.PartitionInfo[] offlinePartitionInfoMap = offlineTpi.getPartitionInfoMap();
+        TablePartitionInfo.PartitionInfo[] realtimePartitionInfoMap = realtimeTpi.getPartitionInfoMap();
+
+        int numPartitions = offlineTpi.getNumPartitions();
         PartitionInfo[] partitionInfoMap = new PartitionInfo[numPartitions];
         for (int i = 0; i < numPartitions; i++) {
           TablePartitionInfo.PartitionInfo offlinePartitionInfo = offlinePartitionInfoMap[i];
@@ -435,96 +616,127 @@ public class WorkerManager {
           }
           if (offlinePartitionInfo == null) {
             partitionInfoMap[i] =
-                new PartitionInfo(realtimePartitionInfo._fullyReplicatedServers, null,
-                    realtimePartitionInfo._segments);
+                new PartitionInfo(realtimePartitionInfo._fullyReplicatedServers, null, realtimePartitionInfo._segments);
             continue;
           }
           if (realtimePartitionInfo == null) {
             partitionInfoMap[i] =
-                new PartitionInfo(offlinePartitionInfo._fullyReplicatedServers, offlinePartitionInfo._segments,
-                    null);
+                new PartitionInfo(offlinePartitionInfo._fullyReplicatedServers, offlinePartitionInfo._segments, null);
             continue;
           }
           Set<String> fullyReplicatedServers = new HashSet<>(offlinePartitionInfo._fullyReplicatedServers);
           fullyReplicatedServers.retainAll(realtimePartitionInfo._fullyReplicatedServers);
           Preconditions.checkState(!fullyReplicatedServers.isEmpty(),
               "Failed to find fully replicated server for partition: %s in hybrid table: %s", i, tableName);
-          partitionInfoMap[i] =
-              new PartitionInfo(fullyReplicatedServers, offlinePartitionInfo._segments,
-                  realtimePartitionInfo._segments);
+          partitionInfoMap[i] = new PartitionInfo(fullyReplicatedServers, offlinePartitionInfo._segments,
+              realtimePartitionInfo._segments);
         }
-        return new PartitionTableInfo(partitionInfoMap, timeBoundaryInfo);
+        return new PartitionTableInfo(partitionInfoMap, timeBoundaryInfo, offlineTpi.getPartitionColumn(),
+            numPartitions, offlineTpi.getPartitionFunctionName());
       } else if (offlineRoutingExists) {
-        return getOfflinePartitionTableInfo(offlineTableName, partitionKey, numPartitions, partitionFunction);
+        return getOfflinePartitionTableInfo(offlineTableName);
       } else {
-        return getRealtimePartitionTableInfo(realtimeTableName, partitionKey, numPartitions, partitionFunction);
+        return getRealtimePartitionTableInfo(realtimeTableName);
       }
     } else {
       if (tableType == TableType.OFFLINE) {
-        return getOfflinePartitionTableInfo(tableName, partitionKey, numPartitions, partitionFunction);
+        return getOfflinePartitionTableInfo(tableName);
       } else {
-        return getRealtimePartitionTableInfo(tableName, partitionKey, numPartitions, partitionFunction);
+        return getRealtimePartitionTableInfo(tableName);
       }
     }
   }
 
-  private TablePartitionInfo getTablePartitionInfo(String tableNameWithType, String partitionKey, int numPartitions,
-      String partitionFunction) {
-    TablePartitionInfo tablePartitionInfo = _routingManager.getTablePartitionInfo(tableNameWithType);
-    Preconditions.checkState(tablePartitionInfo != null, "Failed to find table partition info for table: %s",
-        tableNameWithType);
-    Preconditions.checkState(tablePartitionInfo.getPartitionColumn().equals(partitionKey),
+  private static void verifyCompatibility(TablePartitionInfo offlineTpi, TablePartitionInfo realtimeTpi)
+      throws IllegalArgumentException {
+    Preconditions.checkState(offlineTpi.getPartitionColumn().equals(realtimeTpi.getPartitionColumn()),
+        "Partition column mismatch for hybrid table %s: %s offline vs %s online", offlineTpi.getTableNameWithType(),
+        offlineTpi.getPartitionColumn(), realtimeTpi.getPartitionColumn());
+    Preconditions.checkState(offlineTpi.getNumPartitions() == realtimeTpi.getNumPartitions(),
+        "Partition size mismatch for hybrid table %s: %s offline vs %s online", offlineTpi.getTableNameWithType(),
+        offlineTpi.getNumPartitions(), realtimeTpi.getNumPartitions());
+    Preconditions.checkState(
+        offlineTpi.getPartitionFunctionName().equalsIgnoreCase(realtimeTpi.getPartitionFunctionName()),
+        "Partition function mismatch for hybrid table %s: %s offline vs %s online", offlineTpi.getTableNameWithType(),
+        offlineTpi.getPartitionFunctionName(), realtimeTpi.getPartitionFunctionName());
+  }
+
+  /**
+   * Verifies that the partition info maps from the table partition info are compatible with the information supplied
+   * as arguments.
+   */
+  private void checkPartitionInfoMap(PartitionTableInfo partitionTableInfo, String tableNameWithType,
+      String partitionKey, int numPartitions, String partitionFunction) {
+    Preconditions.checkState(partitionTableInfo._partitionKey.equals(partitionKey),
         "Partition key: %s does not match partition column: %s for table: %s", partitionKey,
-        tablePartitionInfo.getPartitionColumn(), tableNameWithType);
-    Preconditions.checkState(tablePartitionInfo.getNumPartitions() == numPartitions,
-        "Partition size mismatch (hint: %s, table: %s) for table: %s", numPartitions,
-        tablePartitionInfo.getNumPartitions(), tableNameWithType);
-    Preconditions.checkState(tablePartitionInfo.getPartitionFunctionName().equalsIgnoreCase(partitionFunction),
+        partitionTableInfo._partitionKey, tableNameWithType);
+    Preconditions.checkState(partitionTableInfo._numPartitions == numPartitions,
+        "Partition size mismatch (hint: %s, table: %s) for table: %s", numPartitions, partitionTableInfo._numPartitions,
+        tableNameWithType);
+    Preconditions.checkState(partitionTableInfo._partitionFunction.equalsIgnoreCase(partitionFunction),
         "Partition function mismatch (hint: %s, table: %s) for table %s", partitionFunction,
-        tablePartitionInfo.getPartitionFunctionName(), tableNameWithType);
-    Preconditions.checkState(tablePartitionInfo.getSegmentsWithInvalidPartition().isEmpty(),
-        "Find %s segments with invalid partition for table: %s",
-        tablePartitionInfo.getSegmentsWithInvalidPartition().size(), tableNameWithType);
-    return tablePartitionInfo;
+        partitionTableInfo._partitionFunction, tableNameWithType);
   }
 
-  private PartitionTableInfo getOfflinePartitionTableInfo(String offlineTableName, String partitionKey,
-      int numPartitions, String partitionFunction) {
-    TablePartitionInfo.PartitionInfo[] tablePartitionInfoArr =
-        getTablePartitionInfo(offlineTableName, partitionKey, numPartitions, partitionFunction).getPartitionInfoMap();
-    PartitionInfo[] partitionInfoMap = new PartitionInfo[numPartitions];
-    for (int i = 0; i < numPartitions; i++) {
-      TablePartitionInfo.PartitionInfo partitionInfo = tablePartitionInfoArr[i];
-      if (partitionInfo != null) {
-        partitionInfoMap[i] =
-            new PartitionInfo(partitionInfo._fullyReplicatedServers, partitionInfo._segments, null);
-      }
-    }
-    return new PartitionTableInfo(partitionInfoMap, null);
+  private PartitionTableInfo getOfflinePartitionTableInfo(String offlineTableName) {
+    TablePartitionInfo offlineTpi = _routingManager.getTablePartitionInfo(offlineTableName);
+    Preconditions.checkState(offlineTpi != null, "Failed to find table partition info for table: %s", offlineTableName);
+    return PartitionTableInfo.fromTablePartitionInfo(offlineTpi, TableType.OFFLINE);
   }
 
-  private PartitionTableInfo getRealtimePartitionTableInfo(String realtimeTableName, String partitionKey,
-      int numPartitions, String partitionFunction) {
-    TablePartitionInfo.PartitionInfo[] tablePartitionInfoArr =
-        getTablePartitionInfo(realtimeTableName, partitionKey, numPartitions, partitionFunction).getPartitionInfoMap();
-    PartitionInfo[] partitionInfoMap = new PartitionInfo[numPartitions];
-    for (int i = 0; i < numPartitions; i++) {
-      TablePartitionInfo.PartitionInfo partitionInfo = tablePartitionInfoArr[i];
-      if (partitionInfo != null) {
-        partitionInfoMap[i] =
-            new PartitionInfo(partitionInfo._fullyReplicatedServers, null, partitionInfo._segments);
-      }
-    }
-    return new PartitionTableInfo(partitionInfoMap, null);
+  private PartitionTableInfo getRealtimePartitionTableInfo(String realtimeTableName) {
+    TablePartitionInfo realtimeTpi = _routingManager.getTablePartitionInfo(realtimeTableName);
+    Preconditions.checkState(realtimeTpi != null, "Failed to find table partition info for table: %s",
+        realtimeTableName);
+    return PartitionTableInfo.fromTablePartitionInfo(realtimeTpi, TableType.REALTIME);
   }
 
   private static class PartitionTableInfo {
     final PartitionInfo[] _partitionInfoMap;
+    @Nullable
     final TimeBoundaryInfo _timeBoundaryInfo;
+    final String _partitionKey;
+    final int _numPartitions;
+    final String _partitionFunction;
 
-    PartitionTableInfo(PartitionInfo[] partitionInfoMap, @Nullable TimeBoundaryInfo timeBoundaryInfo) {
+    PartitionTableInfo(PartitionInfo[] partitionInfoMap, @Nullable TimeBoundaryInfo timeBoundaryInfo,
+        String partitionKey, int numPartitions, String partitionFunction) {
       _partitionInfoMap = partitionInfoMap;
       _timeBoundaryInfo = timeBoundaryInfo;
+      _partitionKey = partitionKey;
+      _numPartitions = numPartitions;
+      _partitionFunction = partitionFunction;
+    }
+
+    public static PartitionTableInfo fromTablePartitionInfo(TablePartitionInfo tablePartitionInfo,
+        TableType tableType) {
+      if (!tablePartitionInfo.getSegmentsWithInvalidPartition().isEmpty()) {
+        throw new IllegalStateException(
+            "Find " + tablePartitionInfo.getSegmentsWithInvalidPartition().size() + " segments with invalid partition");
+      }
+
+      int numPartitions = tablePartitionInfo.getNumPartitions();
+      TablePartitionInfo.PartitionInfo[] tablePartitionInfoMap = tablePartitionInfo.getPartitionInfoMap();
+      PartitionInfo[] workerPartitionInfoMap = new PartitionInfo[numPartitions];
+      for (int i = 0; i < numPartitions; i++) {
+        TablePartitionInfo.PartitionInfo partitionInfo = tablePartitionInfoMap[i];
+        if (partitionInfo != null) {
+          switch (tableType) {
+            case OFFLINE:
+              workerPartitionInfoMap[i] =
+                  new PartitionInfo(partitionInfo._fullyReplicatedServers, partitionInfo._segments, null);
+              break;
+            case REALTIME:
+              workerPartitionInfoMap[i] =
+                  new PartitionInfo(partitionInfo._fullyReplicatedServers, null, partitionInfo._segments);
+              break;
+            default:
+              throw new IllegalStateException("Unsupported table type: " + tableType);
+          }
+        }
+      }
+      return new PartitionTableInfo(workerPartitionInfoMap, null, tablePartitionInfo.getPartitionColumn(),
+          numPartitions, tablePartitionInfo.getPartitionFunctionName());
     }
   }
 
